@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <access component="com_content">
 	<section name="component">
-		<action name="core.manage" title="JAction_Manage" description="JAction_Manage_Desc" />
-		<action name="core.create" title="JAction_Create" description="JAction_Create_Desc" />
-		<action name="core.delete" title="JAction_Delete" description="JAction_Delete_Desc" />
-		<action name="core.edit" title="JAction_Edit" description="JAction_Edit_Desc" />
-		<action name="core.edit.state" title="JAction_Edit_State" description="JAction_Edit_State_Desc" />
+		<action name="core.admin" title="JAction_Admin" description="JAction_Admin_Component_Desc" />
+		<action name="core.manage" title="JAction_Manage" description="JAction_Manage_Component_Desc" />
+		<action name="core.create" title="JAction_Create" description="JAction_Create_Component_Desc" />
+		<action name="core.delete" title="JAction_Delete" description="JAction_Delete_Component_Desc" />
+		<action name="core.edit" title="JAction_Edit" description="JAction_Edit_Component_Desc" />
+		<action name="core.edit.state" title="JAction_Edit_State" description="JAction_Edit_State_Component_Desc" />
 	</section>
 	<section name="category">
 		<action name="core.create" title="CATEGORY_ACCESS_CREATE" description="CATEGORY_ACCESS_CREATE_DESC" />
