@@ -14,9 +14,13 @@
 			component="com_messages"
 			section="component">
 			<action
+				name="core.admin"
+				title="JAction_Admin"
+				description="JAction_Manage_Component_Desc" />
+			<action
 				name="core.manage"
 				title="JAction_Manage"
-				description="JAction_Manage_Desc" />
+				description="JAction_Manage_Component_Desc" />
 		</field>
 	</fields>
 </config>
