@@ -36,6 +36,7 @@ $ -> Language fix or change
 # Fix bug in JTable::delete when tracking assets.
 ! Temporarily disable fulltext display in com_content feeds (need to explicitly retrieve only the required fields to save data overhead).
 ^ Correct the inheritance (via user groups) in the JHtml rules widget.
+^ Added component level core.admin check to allow for non Super User's to edit options (configured for Administrator, denied for Manager).
 
 11-Oct-2009 Ron Severdia
 ^ Standardized all list filters
